# api-server-python

./: .gitignore  Dockerfile  LICENSE  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: image-publish.yml
app/: __init__.py  main.py
